2009-02-21  Badlop  <badlop@process-one.net>

 	* src/mod_shared_roster.erl: Fix bug: a pending subscription
 	request, and later the requester added to the roster due to a
 	shared roster group, that request could neither be accepted or
 	rejected (thanks to Brian Cully)(EJAB-869)

 	* src/mod_pubsub/mod_pubsub.erl: The table pubsub_node in ejabberd
 	older than 2.0.2 had indexes for parentid and type. This is not
 	required since ejabberd 2.0.2, so those indexes can be
 	deleted. (EJAB-669)

 	* doc/Makefile: In Clean do not remove html. In new Distclean,
	remove also html.

 	* doc/Makefile: When cleaning, remove contributed_modules.tex

 	* doc/guide.tex: Provide only an example of language option
 	* doc/guide.html: Likewise

 	* doc/guide.tex: mod_muc can run in several nodes of cluster
 	* doc/guide.html: Likewise

 	* src/odbc/mysql.sql: Fix complain about comment syntax
 	* src/odbc/pg.sql: Likewise

 	* doc/guide.tex: Explain that account creation is only supported
 	by internal and odbc authentication methods
 	* doc/guide.html: Likewise

 	* src/mod_privacy.erl: Privacy list items must be processed in the
 	specified order (EJAB-848)
 	* src/mod_privacy_odbc.erl: Likewise

 	* src/ejabberd_c2s.erl: Ensure unique ID in roster push (EJAB-721)
 	* src/mod_roster.erl: Likewise
 	* src/mod_roster_odbc.erl: Likewise
 	* src/mod_shared_roster.erl: Likewise

2009-02-19  Christophe Romain <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: fix nodetree plugin resolver

2009-02-13  Christophe Romain <christophe.romain@process-one.net>

	* src/ejabberd_auth.erl: prevent from calling
	get_vh_registered_users/2 when not available

2009-01-13  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.3.txt: Minor changes

2009-01-13  Mickael Remond  <mremond@process-one.net>

	* src/tls/Makefile.win32: Windows compilation support.
	* src/tls/tls_drv.c: Likewise.
	* src/tls/stdint.h: Likewise.
